samples/_failures_safe/1761294101_44df49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92e94b21.c: In function ‘main’:
./samples/SAFE/__tmp_92e94b21.c:166:5: error: expected expression at end of input
  166 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_92e94b21.c:166:5: error: expected declaration or statement at end of input
